examples/test/testpolicy1695.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1695
  namespace: namespace269
spec:
  podSelector:
    matchLabels:
      key28: value18
      key16: value33
      key24: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value15
          key30: value32
          key41: value20
      podSelector:
        matchLabels:
          key18: value40
